{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 323,
  "lineage": "e7263110-2e63-8241-87a5-8ba03be8d964",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "counting_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0573aa17dae2ee7bf",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:elastic-ip/eipalloc-0573aa17dae2ee7bf",
            "domain": "vpc",
            "id": "eipalloc-0573aa17dae2ee7bf",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-221-40-151.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.40.151",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "eipalloc-0573aa17dae2ee7bf",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "counting-VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-02ca2d2fd8c0c245f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ca2d2fd8c0c245f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard-counting-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0462976208e04e273"
              }
            ],
            "primary_network_interface_id": "eni-0462976208e04e273",
            "private_dns": "ip-172-16-2-111.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.111",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058e8a888b39d1331",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068537d38a6364711",
            "tags": {
              "Name": "counting-VM"
            },
            "tags_all": {
              "Name": "counting-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0213aaef200a2e568"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-02ca2d2fd8c0c245f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.dashboard_counting_app",
            "aws_security_group.counting-sg",
            "aws_subnet.counting_private",
            "aws_vpc.counting",
            "data.aws_ami.ubuntu",
            "tls_private_key.dashboard_counting_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dashboard-VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03acbba64aef9bf5c",
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:instance/i-0056032824d7ee258",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0056032824d7ee258",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard-counting-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06aa712dfebc4a172"
              }
            ],
            "primary_network_interface_id": "eni-06aa712dfebc4a172",
            "private_dns": "ip-10-0-1-166.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-3-0-50-35.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.50.35",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e29d85e0fd8dd139",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079c3ecd1721eb2a2",
            "tags": {
              "Name": "dashboard-VM"
            },
            "tags_all": {
              "Name": "dashboard-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0755979bddeabdbe8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "i-0056032824d7ee258",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.counting-VM",
            "aws_key_pair.dashboard_counting_app",
            "aws_security_group.counting-sg",
            "aws_security_group.dashboard-sg",
            "aws_subnet.counting_private",
            "aws_subnet.dashboard_public",
            "aws_vpc.counting",
            "aws_vpc.dashboard",
            "data.aws_ami.ubuntu",
            "tls_private_key.dashboard_counting_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:internet-gateway/igw-08357f8e65067694d",
            "id": "igw-08357f8e65067694d",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-igw"
            },
            "tags_all": {
              "Name": "counting-igw"
            },
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "igw-08357f8e65067694d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dashboard_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:internet-gateway/igw-0a7e3f635aaf5dad3",
            "id": "igw-0a7e3f635aaf5dad3",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dashboard-igw"
            },
            "tags_all": {
              "Name": "dashboard-igw"
            },
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "igw-0a7e3f635aaf5dad3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0573aa17dae2ee7bf",
            "association_id": "eipassoc-0237b6c87ab4eec42",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-085924d353f48b056",
            "network_interface_id": "eni-0af89839dcee39043",
            "private_ip": "172.16.1.68",
            "public_ip": "52.221.40.151",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d65fac6319f4145d",
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "nat-085924d353f48b056",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.counting_nat",
            "aws_internet_gateway.counting",
            "aws_subnet.counting_public",
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "counting_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-042a874ec0bce9e6c",
            "id": "rtb-042a874ec0bce9e6c",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085924d353f48b056",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-031149f09fad70c92"
              }
            ],
            "tags": {
              "Name": "counting-private-rt"
            },
            "tags_all": {
              "Name": "counting-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-042a874ec0bce9e6c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.counting_nat",
            "aws_internet_gateway.counting",
            "aws_nat_gateway.counting",
            "aws_subnet.counting_public",
            "aws_vpc.counting",
            "aws_vpc.dashboard",
            "aws_vpc_peering_connection.dashboard_counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "counting_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-024ccfe33c7d9bfa1",
            "id": "rtb-024ccfe33c7d9bfa1",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08357f8e65067694d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "counting-public-rt"
            },
            "tags_all": {
              "Name": "counting-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-024ccfe33c7d9bfa1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.counting",
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dashboard_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:route-table/rtb-0a81425bed5aa7b0e",
            "id": "rtb-0a81425bed5aa7b0e",
            "owner_id": "810421502375",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7e3f635aaf5dad3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-031149f09fad70c92"
              }
            ],
            "tags": {
              "Name": "dashboard-public-rt"
            },
            "tags_all": {
              "Name": "dashboard-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtb-0a81425bed5aa7b0e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.dashboard_igw",
            "aws_vpc.counting",
            "aws_vpc.dashboard",
            "aws_vpc_peering_connection.dashboard_counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "counting_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceef86abc38c96b8",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-042a874ec0bce9e6c",
            "subnet_id": "subnet-068537d38a6364711"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-0ceef86abc38c96b8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.counting_nat",
            "aws_internet_gateway.counting",
            "aws_nat_gateway.counting",
            "aws_route_table.counting_private",
            "aws_subnet.counting_private",
            "aws_subnet.counting_public",
            "aws_vpc.counting",
            "aws_vpc.dashboard",
            "aws_vpc_peering_connection.dashboard_counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "counting_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092e743a639d5ab36",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-024ccfe33c7d9bfa1",
            "subnet_id": "subnet-0d65fac6319f4145d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-092e743a639d5ab36",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.counting",
            "aws_route_table.counting_public",
            "aws_subnet.counting_public",
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dashboard_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9dd5954cbaa68ee",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0a81425bed5aa7b0e",
            "subnet_id": "subnet-079c3ecd1721eb2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "rtbassoc-0d9dd5954cbaa68ee",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.dashboard_igw",
            "aws_route_table.dashboard_public",
            "aws_subnet.dashboard_public",
            "aws_vpc.counting",
            "aws_vpc.dashboard",
            "aws_vpc_peering_connection.dashboard_counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "counting-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0213aaef200a2e568",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0213aaef200a2e568",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "counting-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "counting-sg"
            },
            "tags_all": {
              "Name": "counting-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0213aaef200a2e568",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dashboard-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:security-group/sg-0755979bddeabdbe8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0755979bddeabdbe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "dashboard-sg",
            "name_prefix": "",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dashboard-sg"
            },
            "tags_all": {
              "Name": "dashboard-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "sg-0755979bddeabdbe8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counting_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-068537d38a6364711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068537d38a6364711",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-private-subnet"
            },
            "tags_all": {
              "Name": "counting-private-subnet"
            },
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-068537d38a6364711",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "counting_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-0d65fac6319f4145d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d65fac6319f4145d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-public-subnet"
            },
            "tags_all": {
              "Name": "counting-public-subnet"
            },
            "vpc_id": "vpc-02ba5dcd409392477"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-0d65fac6319f4145d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.counting"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-0862f96b24174d35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0862f96b24174d35c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dashboard-private-subnet"
            },
            "tags_all": {
              "Name": "dashboard-private-subnet"
            },
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-0862f96b24174d35c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dashboard_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:subnet/subnet-079c3ecd1721eb2a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079c3ecd1721eb2a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810421502375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dashboard-public-subnet"
            },
            "tags_all": {
              "Name": "dashboard-public-subnet"
            },
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "subnet-079c3ecd1721eb2a2",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.dashboard"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:vpc/vpc-02ba5dcd409392477",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d0d51b3508c0df72",
            "default_route_table_id": "rtb-0c6d0d6b969b10921",
            "default_security_group_id": "sg-08b4d76fe76e01bc8",
            "dhcp_options_id": "dopt-0b90a22852149bbb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ba5dcd409392477",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6d0d6b969b10921",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "counting-vpc"
            },
            "tags_all": {
              "Name": "counting-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "vpc-02ba5dcd409392477",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:810421502375:vpc/vpc-083c476686ac7c673",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04cbc7eae887ac2b6",
            "default_route_table_id": "rtb-0a21b51b387d2315c",
            "default_security_group_id": "sg-0fc821cbb87657755",
            "dhcp_options_id": "dopt-0b90a22852149bbb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083c476686ac7c673",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a21b51b387d2315c",
            "owner_id": "810421502375",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "dashboard-vpc"
            },
            "tags_all": {
              "Name": "dashboard-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "810421502375",
            "id": "vpc-083c476686ac7c673",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "dashboard_counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-031149f09fad70c92",
            "peer_owner_id": "810421502375",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-02ba5dcd409392477",
            "region": "ap-southeast-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "dashboard-counting-peer"
            },
            "tags_all": {
              "Name": "dashboard-counting-peer"
            },
            "vpc_id": "vpc-083c476686ac7c673"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.counting",
            "aws_vpc.dashboard"
          ]
        }
      ]
    }
  ]
}